--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,10 @@
 *.aux
 *.synctex.gz
 *.log
-### Ignorer tous les fichier (ou dossier) commencant par test_
-test_*
+### Ignorer tous les fichier (ou dossier) commencant par essai_
+essai_*
+### Ignorer tous les fichier (ou dossier) commencant par essai_
+consignes*
 ### à l'exception de foo.html qui est maintenu à la main
 # !foo.html
 ### Ignorer les objets et les archives
