Correction cynthia chap trefle + ajout des fichiers data/cout_* (pour tableaux d'optimisations) dans le projet

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 ### Ignorer tous les fichier (ou dossier) commencant par :
 essai_*
 consignes*
+relectures*
 ### à l'exception de foo.html qui est maintenu à la main
 # !foo.html
 ### Ignorer les objets et les archives
